# weather

./: .gitattributes  .gitignore  EXTENDING  LICENSE  LibTest.py  README.md  pyproject.toml
weather/: __init__.py  weather.py
