[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather"
dynamic = ["version"]
description = "Deterministic weather generation for games and simulations"
readme = "README.md"
authors = [
  {name = "Imran Bin Gifary (System Delta or Imran Delta Online)", email = "imran.sdelta@gmail.com"}
]
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3 Clause",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/weather"

[tool.setuptools]
packages = ["weather"]
# These are standalone files in the root directory
py-modules = ["LibTest"]

[tool.setuptools.dynamic]
version = {attr = "weather.__version__"}